tests/expectations/compiler/interfaces/cycle_cross_program_fail.out
Error [ECHI03712010]: Cyclic interface inheritance detected: lib.aleo/B -> test.aleo/A -> lib.aleo/B
     |
     = Interface inheritance must be acyclic. Remove the circular dependency.Error [ECHI03712000]: Interface `lib.aleo/B` not found.
    --> compiler-test:3:15
     |
   3 | interface A : lib.aleo/B {
     |               ^^^^^^^^^^
     |
     = Make sure the interface is defined in the current program or an imported program.
Error [ECHI03712010]: Cyclic interface inheritance detected: lib.aleo/B -> test.aleo/A -> lib.aleo/B
     |
     = Interface inheritance must be acyclic. Remove the circular dependency.

---
Note: Treating dependencies as Aleo produces different results:

Error [ECHI03712000]: Interface `lib.aleo/B` not found.
    --> compiler-test:3:15
     |
   3 | interface A : lib.aleo/B {
     |               ^^^^^^^^^^
     |
     = Make sure the interface is defined in the current program or an imported program.
Error [ECHI03712000]: Interface `lib.aleo/B` not found.
    --> compiler-test:3:1
     |
   3 | interface A : lib.aleo/B {
     | ^^^^^^^^^^^^^^^^^^^^^^^^^^
   4 |     fn a() -> u64;
     |     ^^^^^^^^^^^^^^
   5 | }
     | ^
     |
     = Make sure the interface is defined in the current program or an imported program.
